Fixed first round of functional errors